Add state plant

--- a/server/html/css/blk.less
+++ b/server/html/css/blk.less
@@ -322,6 +322,7 @@ table{
 
 div.nav{
     height:60px;
+    margin-top:-2px;
     border-top-width:0px;
     border-radius:2px;
     box-shadow:0px 1px 3px -1px fade(@black,50%);
@@ -432,10 +433,11 @@ ul.pagin{
 }
 
 .blk-plant{
+    padding:6px 6px;
     border:solid 1px fade(@gray,30%);
     border-radius:2px;
     box-shadow:0px 1px 3px -1px fade(@black,50%);
-    background-color:@paper;
+    background-color:@white;
     color:@black;
 }
 
